2012-01-08 dschulze@adobe.com
	Fixed syntax for 'mask-image' property.

2012-12-21 dschulze@adobe.com
	Fixed some typos and examples.

2012-12-21 dschulze@adobe.com
	Introduce source-type data type.
	Introduce mask-source-type longhand.

2012-12-10 dschulze@adobe.com
	Introduce mask-reference data type.
	Remove issues as discussed in FXTF call from 2012-12-10.
	Replace 'none' by 'no-clip' for mask-clip.

2012-11-08 dschulze@adobe.com
	Smaller typo corrections. Remove statement about extending drawing area with masks.

2012-10-29 dschulze@adobe.com
	Add 'none' as keyword for 'mask-clip'.
	Deprecate 'clip'.
	Clean up issues.

2012-10-27 dschulze@adobe.com
	Add origin restriction for resources.

2012-10-26 dschulze@adobe.com
	Add issue to 'mask' property after feedback from Mozilla.
	Link clean up.

2012-10-22 bbirtles@mozilla.com
	Remove absolute links to interfaces and take them from the definitions file
	instead.

2012-10-22 bbirtles@mozilla.com
	Fix some typos and links.

2012-10-21 dschulze@adobe.com
	Make interface code more validator friendly.

2012-10-21 dschulze@adobe.com
	Add CSSOM-VIEW to other references section.

2012-10-21 dschulze@adobe.com
	Add DOM interfaces for 'mask' and 'clipPath'.

2012-10-19 dschulze@adobe.com
	Merge clip region defintion from 'clip' and 'clip-path'.

2012-10-19 dschulze@adobe.com
	Remove masking from example images.

2012-10-12 dschulze@adobe.com
	Added clipping to abstract and introduction.

2012-10-11 dschulze@adobe.com
	Specify how mask-box-image contribute to masking.
	Cleanup.

2012-10-11 dschulze@adobe.com
	Replace all FuncIRI references by url.
	Remove normative reference to Filter Effects and just use SVG 1.1.
	Fixed typos.

2012-10-10 dschulze@adobe.com
	Added 'clip' property from CSS 2.1.
	Fixed typos.

2012-10-09 bbirtles@mozilla.com
	Fixed further typos.
	Added definition of alpha and luminance under 'mask' property.
	Extend example of mask-type overriding to something more realistic.

2012-10-07 dschulze@adobe.com