@@ -2331,10 +2331,11 @@ fine-grained control over the interactions between hit testing and clipping.</p>
 
 <p>The <a>SVGClipPathElement</a> interface corresponds to the <a>'clipPath'</a> element.</p>
 
-<pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGDefinitionElement</a> {
+<pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGTransformableElement</a> {
   readonly attribute <a>SVGAnimatedEnumeration</a> <a href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
 };
 
+<a>SVGClipPathElement</a> implements <a>SVGTests</a>;
 <a>SVGClipPathElement</a> implements <a>SVGUnitTypes</a>;</pre>
 
 <dl class="interface">
