@@ -66,4 +66,5 @@
   <term name='tree order' href='http://www.w3.org/TR/2012/WD-dom-20120405/#concept-tree-order'/>
 
   <interface name='SVGDefinitionElement' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement'/>
+  <interface name='SVGTransformableElement' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGTransformableElement'/>
 </definitions>
