@@ -3949,12 +3949,15 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    element.
 
   <pre class=idl>interface <b>SVGClipPathElement</b> : <a
-   href="http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
+   href="http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGTransformableElement">SVGTransformableElement</a> {
   readonly attribute <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
 };
 
+<a
+   href="#InterfaceSVGClipPathElement">SVGClipPathElement</a> implements <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGTests">SVGTests</a>;
 <a
    href="#InterfaceSVGClipPathElement">SVGClipPathElement</a> implements <a
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>;</pre>
