@@ -1,3 +1,6 @@
+2012-01-09 dschulze@adobe.com
+	Correct IDL defintion of SVGClipPathElement.
+
 2012-01-08 dschulze@adobe.com
 	Fixed syntax for 'mask-image' property.
 
